[gd_scene load_steps=8 format=2]

[ext_resource path="res://Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "show text"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("disclaimer_text:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("play:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("quit:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 0.999
anchor_bottom = 0.367
margin_right = 0.0239258
margin_bottom = 0.166992
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "The Vaccine"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="."]
light_mask = -2147483647
anchor_left = 0.318
anchor_top = 0.4
anchor_right = 0.707
anchor_bottom = 0.585
margin_left = 0.367981
margin_top = 9.0
margin_right = 0.0319824
margin_bottom = 8.99997
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
anchor_left = 0.318
anchor_top = 0.707
anchor_right = 0.707
anchor_bottom = 0.892
margin_left = 0.367981
margin_top = -0.200012
margin_right = 0.0319824
margin_bottom = -0.200012
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discliamer" type="AnimationPlayer" parent="."]
"anims/show text" = SubResource( 3 )
anims/show_disclaimer = SubResource( 4 )

[node name="disclaimer_text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -201.0
margin_bottom = -111.0
rect_scale = Vector2( 3.301, 3.18 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|__Disclaimer__|
this is a work of fiction
the game uses a rough simulation to simulate the risk factor in the game  the game does not corelate  to real life , and any similarities are purely co-incidential 
"
align = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="discliamer" to="." method="_on_discliamer_animation_finished"]
